--- a/app/src/main/res/layout/beneficiaries_placeholder.xml
+++ b/app/src/main/res/layout/beneficiaries_placeholder.xml
@@ -74,9 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/img_referral"
             android:text="Terms of Service"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            style="@style/titleTextViews"  />
 
         <TextView
             android:id="@+id/text_referral_content"
