--- a/app/src/main/res/layout/buy_inputs_card_orders.xml
+++ b/app/src/main/res/layout/buy_inputs_card_orders.xml
@@ -164,7 +164,7 @@
                 android:id="@+id/text_view_order_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_10dp"
                 android:gravity="center_vertical"
                 android:text="Order Status"
                 android:textAllCaps="false"
@@ -177,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_marginEnd="@dimen/margin_10dp"
                 android:gravity="center_vertical"
                 android:text="Pending"
                 android:textAllCaps="false"
