--- a/app/src/main/res/layout/buy_inputs_maps.xml
+++ b/app/src/main/res/layout/buy_inputs_maps.xml
@@ -28,7 +28,7 @@
         android:layout_width="@dimen/dimen_30dp"
         android:layout_height="@dimen/dimen_30dp"
         android:tint="@color/red"
-        android:layout_margin="@dimen/margin_10"
+        android:layout_margin="@dimen/margin_10dp"
         android:src="@drawable/ic_close"
         android:id="@+id/closeBtn"/>
 
@@ -43,7 +43,7 @@
         android:layout_marginBottom="15dp"
         android:drawableLeft="@drawable/places_ic_search"
         android:background="@color/white"
-        android:layout_margin="@dimen/margin_10"
+        android:layout_margin="@dimen/margin_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
