--- a/app/src/main/res/layout/fragment_wallet_pay.xml
+++ b/app/src/main/res/layout/fragment_wallet_pay.xml
@@ -496,7 +496,7 @@
                             android:id="@+id/txt_bill_by_coupon"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/margin_10"
+                            android:layout_marginTop="@dimen/margin_10dp"
                             android:gravity="center"
                             android:text="Coupon ?"
                             android:textColor="@color/colorPrimary"
@@ -524,7 +524,7 @@
                             android:id="@+id/txt_wallet_bill_coupon"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:layout_marginTop="@dimen/margin_10"
+                            android:layout_marginTop="@dimen/margin_10dp"
                             android:background="@drawable/outline_primary"
                             android:hint="Enter.."
                             android:inputType="text"
@@ -537,8 +537,8 @@
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:layout_marginRight="@dimen/margin_10"
+                    android:layout_marginLeft="@dimen/margin_10dp"
+                    android:layout_marginRight="@dimen/margin_10dp"
                     android:layout_marginBottom="15dp"
                     android:paddingStart="20dp"
                     android:paddingEnd="20dp"
