--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
@@ -155,8 +155,8 @@
         android:id="@+id/layout_btn_pay"
         android:layout_width="wrap_content"
         android:layout_height="40dip"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
+        android:layout_marginLeft="@dimen/margin_10dp"
+        android:layout_marginRight="@dimen/margin_10dp"
         android:layout_marginBottom="15dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
