--- a/app/src/main/res/layout/wallet_add_money_voucher.xml
+++ b/app/src/main/res/layout/wallet_add_money_voucher.xml
@@ -134,9 +134,9 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginRight="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
