--- a/app/src/main/res/layout/wallet_transaction_card.xml
+++ b/app/src/main/res/layout/wallet_transaction_card.xml
@@ -27,7 +27,7 @@
                 app:autoSizeTextType="uniform"
                 android:background="@drawable/rectangular_blue_solid"
                 android:gravity="center"
-                android:padding="@dimen/margin_10"
+                android:padding="@dimen/margin_10dp"
                 tools:text="JM"
                 android:textColor="@color/white"
                 android:textStyle="bold"
@@ -131,7 +131,7 @@
             android:id="@+id/layout_amount"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline8"
