--- a/app/src/main/res/layout/buy_inputs_row_item_shipping_time_slots.xml
+++ b/app/src/main/res/layout/buy_inputs_row_item_shipping_time_slots.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="$ 20.00"
-            android:textSize="@dimen/margin_16"
+            android:textSize="@dimen/margin_16dp"
             android:id="@+id/delivery_price"
             android:textStyle="bold"/>
 
