--- a/app/src/main/res/layout/dialog_agent_customer_deposit.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_deposit.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10dp">
 
             <TextView
                 android:id="@+id/text_view_error_message"
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="@string/account_number"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -202,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Mobile Number"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -262,7 +262,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Amount"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -303,7 +303,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rectangular_blue_solid"
                 android:layout_gravity="center"
@@ -332,7 +332,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
