--- a/app/src/main/res/layout/dialog_agent_customer_funds_transfer.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_funds_transfer.xml
@@ -51,7 +51,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -491,7 +491,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
@@ -518,7 +518,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
