--- a/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10dp">
 
             <TextView
                 android:id="@+id/text_view_error_message"
@@ -122,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Customer Number"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -206,7 +206,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Phone Number"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -264,7 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Amount"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="@dimen/margin_16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -313,9 +313,9 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginRight="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
                 android:gravity="right"
@@ -351,7 +351,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
