--- a/app/src/main/res/layout/dialog_enter_pin.xml
+++ b/app/src/main/res/layout/dialog_enter_pin.xml
@@ -81,7 +81,7 @@
             android:text="Quantity"
             android:layout_marginStart="@dimen/dimen_20dp"
             android:layout_marginEnd="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_15dp"
             android:textSize="18sp" />
         <LinearLayout
             android:layout_width="match_parent"
