--- a/app/src/main/res/layout/fragment_add_beneficiary.xml
+++ b/app/src/main/res/layout/fragment_add_beneficiary.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             android:orientation="vertical"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10dp">
 
 
             <LinearLayout
@@ -356,7 +356,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Beneficiary Name"
-                    android:textSize="@dimen/margin_16"
+                    android:textSize="@dimen/margin_16dp"
                     android:layout_marginBottom="5dp"/>
 
                 <LinearLayout
@@ -401,7 +401,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Beneficiary Mobile"
-                    android:textSize="@dimen/margin_16"
+                    android:textSize="@dimen/margin_16dp"
                     android:layout_marginBottom="5dp"/>
 
                 <LinearLayout
@@ -452,9 +452,9 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginRight="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
                 android:gravity="right"
