--- a/app/src/main/res/layout/fragment_business_information.xml
+++ b/app/src/main/res/layout/fragment_business_information.xml
@@ -47,7 +47,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="?actionBarSize"
                     android:orientation="vertical"
-                    android:padding="@dimen/margin_15">
+                    android:padding="@dimen/margin_15dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -119,7 +119,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_10dp"
                         android:gravity="center_vertical"
                         android:text="Registration No."
                         android:textColor="@color/textColor"
@@ -150,7 +150,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_10dp"
                         android:gravity="center_vertical"
                         android:text="License No."
                         android:textColor="@color/textColor"
