--- a/app/src/main/res/layout/fragment_employment_information.xml
+++ b/app/src/main/res/layout/fragment_employment_information.xml
@@ -49,7 +49,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="?actionBarSize"
                    android:orientation="vertical"
-                    android:padding="@dimen/margin_15">
+                    android:padding="@dimen/margin_15dp">
 
                     <TextView
                         android:layout_width="match_parent"
