--- a/app/src/main/res/layout/fragment_finger_print_authentication.xml
+++ b/app/src/main/res/layout/fragment_finger_print_authentication.xml
@@ -69,9 +69,9 @@
         android:id="@+id/layout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginLeft="@dimen/margin_10dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/rounded_corners_button"
         android:gravity="right"
