--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             android:orientation="vertical"
-            android:paddingTop="@dimen/margin_10">
+            android:paddingTop="@dimen/margin_10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -508,9 +508,9 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginRight="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
                 android:gravity="right"
