--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -38,10 +38,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/margin_10"
+            android:paddingLeft="@dimen/margin_10dp"
             android:layout_marginTop="?actionBarSize"
             android:paddingTop="10dp"
-            android:paddingRight="@dimen/margin_10">
+            android:paddingRight="@dimen/margin_10dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -120,7 +120,7 @@
                     android:id="@+id/layout1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -156,7 +156,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/layout1"
-                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
