--- a/app/src/main/res/layout/layout_product_major.xml
+++ b/app/src/main/res/layout/layout_product_major.xml
@@ -158,7 +158,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_marginStart="@dimen/margin_10"
+                                android:layout_marginStart="@dimen/margin_10dp"
                                 android:layout_marginTop="@dimen/dimen_5dp"
                                 android:layout_toEndOf="@id/fifth_star"
                                 android:ellipsize="end"
@@ -179,7 +179,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="@dimen/dimen_20dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="@dimen/margin_10"
+                android:layout_marginBottom="@dimen/margin_10dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
