--- a/app/src/main/res/layout/my_produce_list_item.xml
+++ b/app/src/main/res/layout/my_produce_list_item.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_10"
+    android:layout_marginTop="@dimen/margin_10dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:layout_marginBottom="@dimen/dimen_10dp"
@@ -49,7 +49,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="@dimen/margin_10"
+            android:layout_margin="@dimen/margin_10dp"
             app:cardCornerRadius="@dimen/dimen_5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
@@ -193,8 +193,8 @@
             android:id="@+id/item_produce_variety"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10dp"
+            android:layout_marginEnd="@dimen/margin_10dp"
             android:gravity="start|center"
             android:padding="@dimen/dimen_5dp"
             android:text="Asia F1"
@@ -209,8 +209,8 @@
             android:id="@+id/item_produce_quantity"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10dp"
+            android:layout_marginEnd="@dimen/margin_10dp"
             android:gravity="start|center"
             android:padding="@dimen/dimen_5dp"
             android:text="20 boxes"
@@ -225,8 +225,8 @@
             android:id="@+id/item_produce_price"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10dp"
+            android:layout_marginEnd="@dimen/margin_10dp"
             android:gravity="start|center"
             android:padding="@dimen/dimen_5dp"
             android:text="UGX 100,000/box"
@@ -241,8 +241,8 @@
             android:id="@+id/item_produce_date"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10dp"
+            android:layout_marginEnd="@dimen/margin_10dp"
             android:gravity="start|center"
             android:padding="@dimen/dimen_5dp"
             android:text="08/08/2020"
