--- a/app/src/main/res/layout/new_forgot_pin.xml
+++ b/app/src/main/res/layout/new_forgot_pin.xml
@@ -72,7 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dimen_20dp"
-                        android:layout_marginTop="@dimen/margin_15"
+                        android:layout_marginTop="@dimen/margin_15dp"
                         android:layout_marginEnd="@dimen/dimen_20dp"
                         android:orientation="vertical">
                         <LinearLayout
