--- a/app/src/main/res/layout/wallet_purchase_card_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_card_preview.xml
@@ -295,9 +295,9 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rectangular_blue_solid"
                 android:gravity="right"
