--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,11 +24,11 @@
     <dimen name="dimen_16sp">16sp</dimen>
     <dimen name="dimen_14sp">14sp</dimen>
     <dimen name="dimen_15sp">15sp</dimen>
-    <dimen name="margin_16">16dp</dimen>
-    <dimen name="margin_10">10dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_5dp">5dp</dimen>
-    <dimen name="margin_15">15dp</dimen>
+    <dimen name="margin_15dp">15dp</dimen>
     <dimen name="dimen_20sp">20sp</dimen>
 
 
